Fixed link (Solution partner) & Added link of stackoverflow in gnav

--- a/src/sass/pages/_register.scss
+++ b/src/sass/pages/_register.scss
@@ -516,16 +516,12 @@ body.register {
   }
   #main-wrap {
   background-color: #3859a0;
+  padding-bottom: 10px;
   }
 
   h1 {
     margin-top: 0;
   }
-}
-
-#main-wrap {
-  //background-color: #3859a0;
-  padding-bottom: 10px;
 }
 
 #signup-start {
